hphp/hack/test/typecheck/using/using_as_function_name.php.exp
File "using_as_function_name.php", line 4, characters 15-15:
A name or __construct keyword is expected here. (Parsing[1002])
File "using_as_function_name.php", line 4, characters 10-14:
Illegal function name: using (NastCheck[3025])
