hphp/hack/test/typecheck/using/using_as_function_name.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function using(int $x): void {}
